--- a/app/views/category/event.html.erb
+++ b/app/views/category/event.html.erb
@@ -18,10 +18,10 @@
        <div class="bootstrap">
          <li><div class="panel panel-default">
        <div class="panel-heading">
-        <h3 class="panel-title"><%= link_to "イベントメイクアップ","/notes/search" %></h3>
+        <h3 class="panel-title"><%= link_to "イベントメイクアップ","/notes/event" %></h3>
        </div>
    
-  <%= link_to image_tag( 'event/makeup.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag( 'event/makeup.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/event" %>
        </div>
          </li>
   </div>
@@ -30,9 +30,9 @@
 <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-    <h3 class="panel-title"><%= link_to "結婚司会","/notes/search" %></h3>
+    <h3 class="panel-title"><%= link_to "結婚司会","/notes/event" %></h3>
   </div>
-          <%= link_to image_tag( 'event/bouquet.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+          <%= link_to image_tag( 'event/bouquet.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/event" %>
 
     </div>
   </li>
@@ -42,10 +42,10 @@
 <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "バーテンディング","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "バーテンディング","/notes/event" %></h3>
      </div>
        
-  <%= link_to image_tag( 'event/cocktails.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag( 'event/cocktails.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/event" %>
     </div>
   </li>
   </div>
@@ -54,10 +54,10 @@
 <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-   <h3 class="panel-title"><%= link_to "フラワーデザイナー","/notes/search" %></h3>
+   <h3 class="panel-title"><%= link_to "フラワーデザイナー","/notes/event" %></h3>
  </div>
         
-  <%= link_to image_tag( 'event/floral-arrangement.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag( 'event/floral-arrangement.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/event" %>
 
 
     </div>
@@ -67,10 +67,10 @@
   <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "マジシャン","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "マジシャン","/notes/event" %></h3>
      </div>
      
-  <%= link_to image_tag( 'event/magicianhat.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag( 'event/magicianhat.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/event" %>
     </div>
   </li>
   </div>
@@ -79,10 +79,10 @@
   <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "イベントカメラマン","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "イベントカメラマン","/notes/event" %></h3>
      </div>
        
-  <%= link_to image_tag('event/camera.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag('event/camera.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/event" %>
 
 
     </div>
@@ -93,10 +93,10 @@
   <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "フェイスペインティング","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "フェイスペインティング","/notes/event" %></h3>
      </div>
         
-  <%= link_to image_tag('event/facepaint.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag('event/facepaint.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/event" %>
 
     </div>
   </li>
@@ -108,10 +108,10 @@
   <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "ヘアスタイリング","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "ヘアスタイリング","/notes/event" %></h3>
      </div>
     
-  <%= link_to image_tag('event/bride.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag('event/bride.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/event" %>
 
     </div>
   </li>
@@ -120,9 +120,9 @@
   <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "バルーンアーティスト","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "バルーンアーティスト","/notes/event" %></h3>
      </div>
-  <%= link_to image_tag('event/shoes.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag('event/shoes.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/event" %>
     </div>
   </li>
   </div>
@@ -134,9 +134,9 @@
   <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "コメディアン","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "コメディアン","/notes/event" %></h3>
      </div>
-  <%= link_to image_tag('event/microphone.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag('event/microphone.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/event" %>
     </div>
   </li>
   </div>
@@ -144,9 +144,9 @@
     <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "DJ","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "DJ","/notes/event" %></h3>
      </div>
-  <%= link_to image_tag( 'event/record.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag( 'event/record.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/event" %>
 
     </div>
   </li>
@@ -157,10 +157,10 @@
 <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "その他","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "その他","/notes/event" %></h3>
      </div>
 
-  <%= link_to image_tag( 'event/eyeshadow.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag( 'event/eyeshadow.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/event" %>
 
     </div>
   </li>
