--- a/app/views/category/housing.html.erb
+++ b/app/views/category/housing.html.erb
@@ -20,105 +20,98 @@
       <div class="bootstrap">
        <li><div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title"><%= link_to "便利屋 修復","/notes/search" %></h3>
+        <h3 class="panel-title"><%= link_to "便利屋 修復","/notes/housing" %></h3>
       </div>
 
-  <%= link_to image_tag( 'housing/repair.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag( 'housing/repair.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/housing" %>
     </div>
      </li>
 
 
    <li><div class="panel panel-default">
    <div class="panel-heading">
-    <h3 class="panel-title"><%= link_to "増設、リモデル","/notes/search" %></h3>
+    <h3 class="panel-title"><%= link_to "増設、リモデル","/notes/housing" %></h3>
   </div>
       
-  <%= link_to image_tag('housing/blueprint.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag('housing/blueprint.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/housing" %>
      
     </div>
   </li>
 
-
-     
-
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "コンクリート","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "コンクリート","/notes/housing" %></h3>
      </div>
-  <%= link_to image_tag('housing/concrete.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag('housing/concrete.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/housing" %>
     </div>
   </li>
 
    <li><div class="panel panel-default">
    <div class="panel-heading">
-   <h3 class="panel-title"><%= link_to "ペインティング","/notes/search" %></h3>
+   <h3 class="panel-title"><%= link_to "ペインティング","/notes/housing" %></h3>
  </div>
 
-
-  <%= link_to image_tag('housing/painting.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
-
+  <%= link_to image_tag('housing/painting.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/housing" %>
     </div>
   </li>
 
 
-
-
-
-
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "屋根、雨漏り","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "屋根、雨漏り","/notes/housing" %></h3>
      </div>
-  <%= link_to image_tag('housing/roof.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag('housing/roof.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/housing" %>
     </div>
   </li>
 
+
+
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "壁、階段、フレーミング","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "壁、階段、フレーミング","/notes/housing" %></h3>
      </div>
  
-  <%= link_to image_tag('housing/floor.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag('housing/floor.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/housing" %>
 
     </div>
   </li>
 
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "ドア、窓","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "ドア、窓","/notes/housing" %></h3>
      </div>
   
-  <%= link_to image_tag('housing/window.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag('housing/window.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/housing" %>
 
     </div>
   </li>
 
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "クリーニング","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "クリーニング","/notes/housing" %></h3>
      </div>
  
-  <%= link_to image_tag('housing/cleaning.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag('housing/cleaning.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/housing" %>
 
     </div>
   </li>
 
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "引っ越し","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "引っ越し","/notes/housing" %></h3>
      </div>
-      <%= link_to image_tag('housing/moving.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+      <%= link_to image_tag('housing/moving.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/housing" %>
     </div>
   </li>
 
 
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "大工、木工","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "大工、木工","/notes/housing" %></h3>
      </div>
  
 
-  <%= link_to image_tag('housing/crosscut.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag('housing/crosscut.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/housing" %>
 
     </div>
   </li>
@@ -126,10 +119,10 @@
 
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "配管工事","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "配管工事","/notes/housing" %></h3>
      </div>
   
-  <%= link_to image_tag( 'housing/plumber.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag( 'housing/plumber.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/housing" %>
 
     </div>
   </li>
@@ -138,10 +131,10 @@
 
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "その他","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "その他","/notes/housing" %></h3>
      </div>
     
-  <%= link_to image_tag( 'pigeon.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag( 'pigeon.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/housing" %>
 
     </div>
   </li>
