--- a/app/views/category/health.html.erb
+++ b/app/views/category/health.html.erb
@@ -15,26 +15,24 @@
    <div class="categories">
      <ul>
 
-
-<div class="bootstrap">
+ <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-    <h3 class="panel-title"><%= link_to "マッサージ","/notes/search" %></h3>
+    <h3 class="panel-title"><%= link_to "マッサージ","/notes/health" %></h3>
   </div>
  
-  <%= link_to image_tag( 'health/massage.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag( 'health/massage.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/health" %>
     </div>
   </li>
   </div>
 
-
 <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-    <h3 class="panel-title"><%= link_to "エステ","/notes/search" %></h3>
+    <h3 class="panel-title"><%= link_to "エステ","/notes/health" %></h3>
   </div>
     
-  <%= link_to image_tag( 'health/este.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag( 'health/este.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/health" %>
     </div>
   </li>
   </div>
@@ -44,10 +42,10 @@
 <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "サイクリング","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "サイクリング","/notes/health" %></h3>
      </div>
      
-  <%= link_to image_tag( 'health/cicling.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag( 'health/cicling.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/health" %>
     </div>
   </li>
   </div>
@@ -56,9 +54,9 @@
 <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-   <h3 class="panel-title"><%= link_to "ヨガ","/notes/search" %></h3>
+   <h3 class="panel-title"><%= link_to "ヨガ","/notes/health" %></h3>
  </div>
-       <%= link_to image_tag( 'health/ballet.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+       <%= link_to image_tag( 'health/ballet.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/health" %>
     </div>
   </li>
   </div>
@@ -67,10 +65,10 @@
   <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "栄養士","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "栄養士","/notes/health" %></h3>
      </div>
     
-  <%= link_to image_tag( 'health/vegies.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag( 'health/vegies.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/health" %>
     </div>
   </li>
   </div>
@@ -79,9 +77,9 @@
   <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "セラピー","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "セラピー","/notes/health" %></h3>
      </div>
-  <%= link_to image_tag( 'health/lotus.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag( 'health/lotus.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/health" %>
     </div>
   </li>
   </div>
@@ -89,14 +87,12 @@
 
 
 
-
-
   <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "パーソナルシェフ","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "パーソナルシェフ","/notes/health" %></h3>
      </div>
-  <%= link_to image_tag( 'health/chef.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>    </div>
+  <%= link_to image_tag( 'health/chef.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/health" %>    </div>
   </li>
   </div>
 
@@ -107,10 +103,10 @@
   <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "人生相談","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "人生相談","/notes/health" %></h3>
      </div>
      
-  <%= link_to image_tag( 'health/chairs.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag( 'health/chairs.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/health" %>
     </div>
   </li>
   </div>
@@ -118,20 +114,20 @@
   <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "カウンセリング","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "カウンセリング","/notes/health" %></h3>
      </div>
      
-  <%= link_to image_tag( 'health/coffee.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>    </div>
+  <%= link_to image_tag( 'health/coffee.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/health" %>    </div>
   </li>
   </div>
 
   <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "座禅","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "座禅","/notes/health" %></h3>
      </div>
      
-    <%= link_to image_tag( 'health/temple.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+    <%= link_to image_tag( 'health/temple.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/health" %>
     </div>
   </li>
   </div>
@@ -139,9 +135,9 @@
   <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "ストレッチ","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "ストレッチ","/notes/health" %></h3>
      </div>
-     <%= link_to image_tag( 'health/strech.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+     <%= link_to image_tag( 'health/strech.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/health" %>
     </div>
   </li>
   </div>
@@ -149,9 +145,9 @@
 <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "その他","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "その他","/notes/health" %></h3>
      </div>
-          <%= link_to image_tag( 'pigeon.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+          <%= link_to image_tag( 'pigeon.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/health" %>
     </div>
   </li>
  </ul>
