--- a/app/views/category/lesson.html.erb
+++ b/app/views/category/lesson.html.erb
@@ -18,7 +18,7 @@
 
   <div class="home-category-wrapper">
 
-  <h2>住まい ジャンル</h2>
+  <h2>習い事 ジャンル</h2>
 
 
 
@@ -30,31 +30,31 @@
 <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
-    <h3 class="panel-title"><%= link_to "歌","/notes/search" %></h3>
+    <h3 class="panel-title"><%= link_to "歌","/notes/lesson" %></h3>
   </div>
      
 
-  <%= link_to image_tag( 'lesson/guitar.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag( 'lesson/guitar.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/lesson" %>
 
     </div>
   </li>
 
    <li><div class="panel panel-default">
    <div class="panel-heading">
-    <h3 class="panel-title"><%= link_to "語学","/notes/search" %></h3>
+    <h3 class="panel-title"><%= link_to "語学","/notes/lesson" %></h3>
   </div>
-  <%= link_to image_tag( 'lesson/english.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag( 'lesson/english.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/lesson" %>
     </div>
   </li>
 
 
      <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "料理","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "料理","/notes/lesson" %></h3>
      </div>
    
 
-  <%= link_to image_tag('lesson/cooking.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag('lesson/cooking.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/lesson" %>
 
     </div>
   </li>
@@ -62,10 +62,10 @@
 
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "ピアノ","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "ピアノ","/notes/lesson" %></h3>
      </div>
         
-  <%= link_to image_tag('lesson/piano.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag('lesson/piano.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/lesson" %>
     </div>
   </li>
 
@@ -76,76 +76,74 @@
 
    <li><div class="panel panel-default">
    <div class="panel-heading">
-   <h3 class="panel-title"><%= link_to "武道","/notes/search" %></h3>
+   <h3 class="panel-title"><%= link_to "武道","/notes/lesson" %></h3>
  </div>
-       <%= link_to image_tag('lesson/muay.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+       <%= link_to image_tag('lesson/muay.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/lesson" %>
 
     </div>
   </li>
 
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "ウェブ","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "ウェブ","/notes/lesson" %></h3>
      </div>
   
-  <%= link_to image_tag('lesson/coding.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag('lesson/coding.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/lesson" %>
     </div>
   </li>
 
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "ダンス","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "ダンス","/notes/lesson" %></h3>
      </div>
      
-  <%= link_to image_tag('lesson/dance.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag('lesson/dance.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/lesson" %>
     </div>
   </li>
 
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "勉学","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "勉学","/notes/lesson" %></h3>
      </div>
-          <%= link_to image_tag('lesson/study.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+          <%= link_to image_tag('lesson/study.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/lesson" %>
     </div>
   </li>
 
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "絵","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "絵","/notes/lesson" %></h3>
      </div>
       
-  <%= link_to image_tag('lesson/paint.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag('lesson/paint.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/lesson" %>
     </div>
   </li>
 
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "パーソナルトレーニング","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "パーソナルトレーニング","/notes/lesson" %></h3>
      </div>
-         <%= link_to image_tag('lesson/fitness.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+         <%= link_to image_tag('lesson/fitness.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/lesson" %>
 
     </div>
   </li>
 
 
-
-
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "編み物","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "編み物","/notes/lesson" %></h3>
      </div>
     
-  <%= link_to image_tag('lesson/crochet.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag('lesson/crochet.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/lesson" %>
 
     </div>
   </li>
 
    <li><div class="panel panel-default">
    <div class="panel-heading">
-     <h3 class="panel-title"><%= link_to "その他","/notes/search" %></h3>
+     <h3 class="panel-title"><%= link_to "その他","/notes/lesson" %></h3>
      </div>
         
-  <%= link_to image_tag('pigeon.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+  <%= link_to image_tag('pigeon.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/lesson" %>
     </div>
   </li>
  </ul>
