send reserve confirm to conversations

--- a/app/views/home/pro.html
+++ b/app/views/home/pro.html
@@ -1,14 +1,12 @@
 <h1><%= @message %></h1>
 
  <div class="pro-top-wrapper">
-    <div class="pro-container">
-      <div class="pro-background-image">
-<a img="https://pixabay.com/static/uploads/photo/2015/06/08/15/06/woman-801872_960_720.jpg">
-       </a>
-     </div>
-      <h1>加速するあなたのビジネス！</h1>
 
-     <p>ビジネスをもっと身近に始めよう</p>
+    <div class="pro-container">
+      
+      <h1>登録費・掲載費無料で集客が可能！</h1>
+
+     <p>集客・口コミ集め・お客様との連絡・サービス管理などのサポートをさせていただきます</p>
 
       <% if user_signed_in? %>
       <div class="bootstrap">
