--- a/app/views/mailbox/_folder_view.html.erb
+++ b/app/views/mailbox/_folder_view.html.erb
@@ -1,33 +1,33 @@
 
 <div class="bootstrap">
-<%= link_to "サービスページへ戻る", :back %>
+  <%= link_to "戻る", :back %>
   <div class="row">
     <div class="spacer"></div>
-     <div class="col-md-12">
+    <div class="col-md-12">
      
       <div class="spacer"></div>
-     </div>
+    </div>
 
     <div class="col-md-4">
      <div class="panel panel-default">
       <div class="panel-body">
        <%= render 'mailbox/folders' %>
-      </div>
      </div>
-    </div>
+   </div>
+ </div>
 
-    <div class="col-md-8">
-     <div class="panel panel-default">
-      <div class="panel-body">
+ <div class="col-md-8">
+   <div class="panel panel-default">
+    <div class="panel-body">
 
-       <% if is_conversation %>
-        <%= render 'conversations/form' %>
-       <% else %>
-        <%= render partial: 'conversations/conversation', collection: messages %>
-       <% end %>
-       
-      </div>
-     </div>
-    </div>
-   </div> 
+     <% if is_conversation %>
+     <%= render 'conversations/form' %>
+     <% else %>
+     <%= render partial: 'conversations/conversation', collection: messages %>
+     <% end %>
+     
+   </div>
+ </div>
+</div>
+</div> 
 </div>
