--- a/app/views/providers/_header.html
+++ b/app/views/providers/_header.html
@@ -2,7 +2,7 @@
   <div class="upper-menu">
     <div class="wrapper" >
       <ul>
-        <li><a href='/providers/profile'>マイページ</a></li>
+        <li><a href='/providers/mypage'>マイページ</a></li>
         <li><a href='/providers/inbox'>メッセージ</a></li>
         <li><%= link_to 'サービス管理', notes_path %></li>
         <li><a href='/providers'>基本情報</a></li>
