--- a/app/views/reservation_mailer/reservation_email.html.erb
+++ b/app/views/reservation_mailer/reservation_email.html.erb
@@ -20,7 +20,9 @@
 
 <br>
  <br>============================================================
-<p>さっそくお返事を返しましょう！</p>
+ <br>
+<p>=> <a href="http://localhost:3000/providers/inbox">こちらのリンク</a>からさっそくお返事を返しましょう！</p>
+<p>からさっそくお返事を返しましょう！</p>
 <br>
 
 <br>※このEメールアドレスは配信専用です。このメッセージに返信しないようお願いいたします。
