--- a/app/views/reservation_mailer/reservation_email.text.erb
+++ b/app/views/reservation_mailer/reservation_email.text.erb
@@ -15,12 +15,12 @@ Seekleをご利用いただき、誠にありがとうございます。
 
 
 
-さっそくお返事を返しましょう！
+=> <a href="http://localhost:3000/providers/inbox">こちらのリンク</a>からさっそくお返事を返しましょう！
 
 
 
 ※このEメールアドレスは配信専用です。このメッセージに返信しないようお願いいたします。
-────────────────────────────────
+────────────────────────────────c
 運営会社：株式会社Seekle
 
 ●お問い合せ
