--- a/app/views/reservation_mailer/reservation_email.text.erb
+++ b/app/views/reservation_mailer/reservation_email.text.erb
@@ -15,7 +15,7 @@ Seekleをご利用いただき、誠にありがとうございます。
 
 
 
-=> <a href="http://localhost:3000/providers/inbox">こちらのリンク</a>からさっそくお返事を返しましょう！
+=> <a href="http://seekle.jp/providers/inbox">こちらのリンク</a>からさっそくお返事を返しましょう！
 
 
 
