--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -28,7 +28,7 @@
         <td><%= reservation.date %></td>
         <td><%= reservation.name %></td>
         <td><%= reservation.phone_number %></td>
-        <td><%= reservation.message %></td>
+        <td><%= simple_format(reservation.message) %></td>
       </tr>
     <% end %>
   </tbody>
