--- a/app/views/reservation_mailer/reservation_email.html.erb
+++ b/app/views/reservation_mailer/reservation_email.html.erb
@@ -21,7 +21,7 @@
 <br>
  <br>============================================================
  <br>
-<p>=> <a href="http://localhost:3000/providers/inbox">こちらのリンク</a>からさっそくお返事を返しましょう！</p>
+<p>=> <a href="http://seekle.jp/providers/inbox">こちらのリンク</a>からさっそくお返事を返しましょう！</p>
 
 <br>
 
