--- a/app/assets/stylesheets/users/index.css
+++ b/app/assets/stylesheets/users/index.css
@@ -1,10 +1,20 @@
 
 .mypage-all_wrapper{
-	padding-top:18px;width:100%; padding-bottom: 60px;
+	padding-top:18px;
+
+	padding-bottom: 60px;
 }
 
+
+
+
+
 .mypage-all_wrapper h1{
-	float:left;margin-left: 180px; font-weight: 500;  line-height: 1.3em; width:56%; 
+	float:left;
+	margin-left: 180px; 
+	font-weight: 500; 
+	 line-height: 1.3em; 
+	 width:56%; 
 }
 
 
