--- a/app/assets/stylesheets/notes/form.css
+++ b/app/assets/stylesheets/notes/form.css
@@ -1,20 +1,3 @@
-.providers_new_post .btn{
-  margin:4% 27%;
-  font-size: 16px;
-    font-weight: 700;
-    text-decoration: none;
-    display: block;
-    text-align: center;
-    padding: 16px;
-    cursor: pointer;
-    border: 1px solid #333;
-    color: #fff;
-    background-color: #FF7F50;
-    box-shadow: 2px 2px #808080;
-    width: 26%;
-    border-radius: 3%;
-
-}
 
 
 .providers_new_post{
@@ -22,8 +5,6 @@
     margin-left:16%;
     margin-bottom: 10%;
 }
-
-
 
 table.newpost {
     
@@ -48,6 +29,34 @@ table.newpost tr{
 }
 
 
+.form-label {
+    margin-left: 10px;
+    font-size: 10px;
+    padding: 3px 5px;
+}
+
+.providers_new_post .btn{
+  margin:4% 27%;
+  font-size: 16px;
+    font-weight: 700;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    padding: 16px;
+    cursor: pointer;
+    border: 1px solid #333;
+    color: #fff;
+    background-color: #FF7F50;
+    box-shadow: 2px 2px #808080;
+    width: 26%;
+    border-radius: 3%;
+
+}
+
+
+
+
+
 
 
 
@@ -56,15 +65,14 @@ table.newpost tr{
 
 
 /* ipad iphone6+PLUSから大きめのスマホのレスポンシブデザイン */
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 414px) {
 
 
 
 .providers_new_post{
 
-        margin-top:6%;
-    margin-left:4%;
-    margin-bottom: 10%;
+    margin-left:0%;
+   
 }
 
 
@@ -78,96 +86,6 @@ table.newpost tr{
 
 .providers_new_post .bootstrap .content-area{
        width:100%;
-}
-
-.providers_new_post .bootstrap p{
-    font-size: 14px;
-}
-
- 
-table.newpost  td {
-     display: block;
-padding-top: 0px;
-padding-bottom: 10px;
-    padding-left:0px;
- 
-
-}
-
-
-table.newpost tr{
-        border-bottom: 1px solid #e6e9e3;
-}
-
- table.newpost th {
-    display: block;
-    border-top: none;
-    border-bottom: none;
-
-  }
-.providers_new_post .btn {
-    margin: 4% 17%;
-
-    width: 60%;
-
-}
-
-
-
-}
-
-
-
-
-
-
-/* ipad iphone6+PLUSから大きめのスマホのレスポンシブデザイン */
-@media screen and (min-width: 320px) and (max-width: 374px) {
-
-
-
-.providers_new_post{
-
-        margin-top:6%;
-    margin-left:0%;
-    margin-bottom: 10%;
-}
-
-}
-
-
-
-
-
-
-
-
-
-
-
-/* ipad iphone6+PLUSから大きめのスマホのレスポンシブデザイン */
-@media screen and (min-width: 414px) {
-
-
-
-.providers_new_post{
-
-        margin-top:6%;
-    margin-left:0%;
-    margin-bottom: 10%;
-}
-
-
-.providers_new_post .bootstrap h2{
-    font-size: 21px;
-}
-
-.providers_new_post .bootstrap .form-control{
-    width:125%;
-}
-
-.providers_new_post .bootstrap .content-area{
-       width:125%;
 }
 
 .providers_new_post .bootstrap p{
@@ -200,13 +118,15 @@ table.newpost tr{
 .providers_new_post .btn {
     margin: 4% 17%;
 
-    width: 60%;
+    width: 55%;
 
 }
 
 
 
 }
+
+
 
 
 
