--- a/app/assets/stylesheets/home/index.css
+++ b/app/assets/stylesheets/home/index.css
@@ -1,23 +1,7 @@
 /*ホームページ*/
 .btn,.txt-contents{display:inline-block}
-.btn,.message{cursor:pointer}.btn,.btn:hover{text-decoration:none}.first-icon,
-
-.top-wrapper{position:relative}
-
-
-.top-wrapper{margin-top:-90px;color:#fff;
-  background: -webkit-linear-gradient(90deg, #66CDAA 10%, #93F9B9 90%);
-  background:    -moz-linear-gradient(90deg,#66CDAA 10%, #93F9B9 90%);
-  background:     -ms-linear-gradient(90deg,#66CDAA 10%, #93F9B9 90%);
-  background:      -o-linear-gradient(90deg, #66CDAA 10%, #93F9B9 90%);
-  background:         linear-gradient(90deg, #66CDAA 10%, #93F9B9 90%);
-  ;text-align:center;padding:150px 0 130px
-}
-
-
-.top-wrapper h1{opacity:.9;font-size:45px;letter-spacing:5px;padding-top:20px}
-.top-wrapper p{opacity:.7;font-size:14px;margin-bottom:35px}
-.btn{background-color:#6495ED}.btn:hover{opacity:1}
+.btn,.message{cursor:pointer}.btn,.btn:hover{text-decoration:none}
+.first-icon.btn{background-color:#6495ED}.btn:hover{opacity:1}
 .wrapper{width:900px;margin:0 auto}
 .explain-seekle-wrapper{height:130px;text-align:center;background-color:#fff;border-top:2px solid #f5f5f5}
 .explain-seekle-wrapper p{font-size:15px;line-height:25px}
@@ -40,6 +24,7 @@
 .message-wrapper .heading h3{font-weight:400}
 .message{background-color:#6495ED;box-shadow:#4682B4 0 3px;padding:15px 40px}
 .fa-fw{font-size:18px;padding-right:10px}
+
 /*プロバイダーページ */
 .pro-top-wrapper{
 	margin-top:-90px;
