--- a/app/assets/stylesheets/home/registration/provider_registration.css
+++ b/app/assets/stylesheets/home/registration/provider_registration.css
@@ -1,8 +1,198 @@
 
+/* ipad iphone4と5のレスポンシブデザイン */
+@media screen and (min-width: 320px) and (max-width: 374px)
+{
+ 
+
+
 .providers_signup{
-    width:60%;
+   
     margin-top:6%;
-    margin-left:28%;
+    margin-left:6%;
+    margin-bottom: 10%;
+}
+
+.providers_signup h2{
+    font-weight:normal;
+    font-size: 16px;
+    clear:both;
+
+}  
+
+
+.provider_join_btn{
+
+
+    margin-left:18%;
+    margin-bottom:10%;
+    font-size:12px;
+    font-weight:700;
+    text-decoration:none;
+    display:block;
+    text-align:center;
+    padding:9px;
+    cursor:pointer;
+    border:1px solid #333;
+    color:#fff;
+    background-color: #FA8072;
+    box-shadow:2px 2px #808080;
+width:50%; 
+border-radius:3%;
+ margin-top:8%;
+}
+
+
+.field input{
+    height:36px;
+    width:273px;
+}
+
+
+.name_field input{
+    width:100%;
+    font-size:20px;
+    padding:7px;
+}
+
+
+}
+
+
+
+
+/* ipad iphone6のレスポンシブデザイン */
+
+@media (min-width: 375px) 
+{
+
+
+.providers_signup{
+    width:100%;
+    margin-top:6%;
+    margin-left:6%;
+    margin-bottom: 10%;
+}
+
+.providers_signup h2{
+    font-weight:normal;
+    font-size: 20px;
+    clear:both;
+}  
+
+
+
+.provider_join_btn{
+
+    margin-left:17%;
+    margin-bottom:10%;
+    font-size:14px;
+    font-weight:700;
+    text-decoration:none;
+    display:block;
+    text-align:center;
+    padding:9px;
+    cursor:pointer;
+    border:1px solid #333;
+    color:#fff;
+    background-color: #FA8072;
+    box-shadow:2px 2px #808080;
+width:50%; 
+border-radius:3%;
+ margin-top:9%;
+}
+
+
+
+.field input{
+    height:40px;
+    width:323px;
+}
+
+.name_field input{
+    width:100%;
+    font-size:20px;
+    padding:7px;
+}
+
+
+
+}
+
+
+/* ipad iphone6+PLUSから大きめのスマホのレスポンシブデザイン */
+@media screen and (min-width: 414px) {
+
+
+.providers_signup{
+    width:100%;
+    margin-top:6%;
+    margin-left:5%;
+    margin-bottom: 10%;
+}
+
+.providers_signup h2{
+    font-weight:normal;
+    font-size: 20px;
+    clear:both;
+}  
+
+
+
+.provider_join_btn{
+
+margin-top: 30px;
+}
+
+
+.name_field input{
+    width:100%;
+    font-size:20px;
+    padding:7px;
+}
+
+
+.field input{
+    height:40px;
+    width:365px;
+
+}
+
+
+}
+
+
+
+
+
+/* ipad タブレットのレスポンシブデザイン */
+@media (min-width: 767px) {
+
+.providers_signup{
+    width:100%;
+    margin-top:6%;
+    margin-left:24%;
+    margin-bottom: 10%;
+}
+
+
+.provider_join_btn{
+   
+    margin-left:0%;
+
+}
+
+
+}
+
+
+
+
+/* MAC */
+@media screen and (min-width: 800px) {
+.providers_signup{
+    width:100%;
+    margin-top:6%;
+    margin-left:26%;
     margin-bottom: 10%;
 }
 
@@ -21,58 +211,46 @@
 }  
 
 
-.field input{
-	font-size:19px;
+.provider_join_btn{
+
+    margin-left:13%;
+    margin-bottom:10%;
+    font-size:16px;
+    font-weight:700;
+    text-decoration:none;
+    display:block;
+    text-align:center;
+    padding:9px;
+    cursor:pointer;
+    border:1px solid #333;
+    color:#fff;
+    background-color: #FA8072;
+    box-shadow:2px 2px #808080;
+width:21%; 
+border-radius:3%;
+ margin-top:5%;
 }
 
+
+.field input{
+        width:610px;
+        height:10%;
+padding:5px;
+    font-size:19px;
+}
+
+
 .name_field input{
-	width:340px;
-	font-size:20px
-	;padding:7px;
+    width:100%;
+    font-size:20px;
+    padding:7px;
 }
 .name_field{
-	margin-top:29px;
+    margin-top:29px;
 }
 
 .field,.name_field{
-	margin-bottom:29px;
+    margin-bottom:29px;
+}
 }
 
-
-
-
-/* ipad iphone4と5のレスポンシブデザイン */
-@media screen and (min-width: 320px) and (max-width: 374px)
-{
-
-}
-
-
-
-
-/* ipad iphone6のレスポンシブデザイン */
-
-@media (min-width: 375px) 
-{
-
-
-
-}
-
-
-
-/* ipad iphone6+PLUSから大きめのスマホのレスポンシブデザイン */
-@media screen and (min-width: 414px) {
-
-
-}
-
-
-
-
-
-/* ipad タブレットのレスポンシブデザイン */
-@media (min-width: 767px) {
-
-
-}
