--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -1,7 +1,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-
+<%= render 'home/header/dashboardhead' %>
  <div class="top-wrapper">
+
   <div class="container">
    <div class="background-image">
     <a img="https://static.pexels.com/photos/7075/people-office-group-team.jpg">
