--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,3 +1,9 @@
+<%= render 'providers/header' %>
+
+<div class="menu-back-head">
+<%= link_to 'サービスページ', @note %> |
+<%= link_to '掲載サービス一覧', notes_path %>
+</div>
 
 <div class="providers_new_post">
   <div class="bootstrap">
@@ -116,8 +122,6 @@
 
 
 
-<%= link_to 'サービスページ', @note %> |
-<%= link_to '掲載サービス一覧', notes_path %>
 </div>
 
 
