--- a/app/views/providers/_header.html
+++ b/app/views/providers/_header.html
@@ -1,23 +1,31 @@
-<div class="up-var">
-  <div class="upper-menu">
-    <div class="wrapper" >
-      <ul>
-        <li><a href='/providers/mypage'>マイページ</a></li>
-        <li><a href='/providers/inbox'>メッセージ</a></li>
-        <li><%= link_to 'サービス管理', notes_path %></li>
-        <li><a href='/providers'>基本情報</a></li>
-      </ul>
+    <% if provider_signed_in? %> 
+          <div class="up-var">
+              <div class="upper-menu">
+                <div class="wrapper" >
+                  <ul>
+                    <li><a href='/providers/mypage'>マイページ</a></li>
+                    <li><a href='/providers/inbox'>メッセージ</a></li>
+                    <li><%= link_to 'サービス管理', notes_path %></li>
+                    <li><a href='/providers'>基本情報</a></li>
+
+                </ul>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
 
 
-<header id="top-head">
-    <div class="inner">
-        <div id="mobile-head">
-           
-          <%= image_tag('whitelogo.png', class: 'logo_2') %>
-            <div id="nav-toggle">
+    <% else %> 
+    <% end %> 
+
+
+
+
+    <header id="top-head">
+        <div class="inner">
+            <div id="mobile-head">
+
+              <%= image_tag('whitelogo.png', class: 'logo_2') %>
+              <div id="nav-toggle">
                 <div>
                     <span></span>
                     <span></span>
@@ -27,20 +35,32 @@
         </div>
         <nav id="global-nav">
             <ul>
-               <li><a href='/providers/mypage'>マイページ</a></li>
-        <li><a href='/providers/inbox'>メッセージ</a></li>
-        <li><%= link_to 'サービス管理', notes_path %></li>
-        <li><a href='/providers'>基本情報</a></li>
-            </ul>
-        </nav>
-    </div>
+              <% if provider_signed_in? %> 
+              <li><a href='/providers/mypage'>マイページ</a></li>
+              <li><a href='/providers/inbox'>メッセージ</a></li>
+              <li><%= link_to 'サービス管理', notes_path %></li>
+              <li><a href='/providers'>基本情報</a></li>
+              <li> <%= link_to 'ログアウト', destroy_provider_session_path, method: :delete %></li> 
+
+              <% else %> 
+
+              <li> <%= link_to 'アカウント作成', new_provider_registration_path %></li> 
+              <li><%= link_to 'プロバイダーログイン',   new_provider_session_path %></li> 
+              <% end %> 
+
+
+          </ul>
+      </nav>
+  </div>
 </header>
+
+
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script>
-(function($) {
-    $(function() {
-        var $header = $('#top-head');
+    (function($) {
+        $(function() {
+            var $header = $('#top-head');
         // Nav Fixed
         $(window).scroll(function() {
             if ($(window).scrollTop() > 350) {
@@ -54,10 +74,5 @@
             $header.toggleClass('open');
         });
     });
-})(jQuery);
+    })(jQuery);
 </script>
-
-
-
-
-
