--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,4 +1,11 @@
 
+<%= render 'providers/header' %>
+
+
+<div class="menu-back-head">
+
+<%= link_to '掲載サービス一覧', notes_path %>
+</div>
 
 <div class="reservations_list">
 <h1> <%= @note.title %>にされている予約一覧</h1>
