--- a/app/views/users/history.html.erb
+++ b/app/views/users/history.html.erb
@@ -1,5 +1,5 @@
 <%= render 'users/header' %>
-
+<%= render 'home/header/dashboardhead' %>
 <div class="reservation_history_wrapper">
 
 	<h1><%= current_user.name %>さんの予約中サービス </h1>
