--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <%= render 'users/header' %>
-
+<%= render 'home/header/dashboardhead' %>
 <div class="mypage-all_wrapper">
   <h1><%= current_user.name %>さんのページ  </h1>
 	<div class="notification_user">
