--- a/app/views/mailbox/inbox.html.erb
+++ b/app/views/mailbox/inbox.html.erb
@@ -1,4 +1,5 @@
 <%= render 'users/header' %>
+<%= render 'home/header/dashboardhead' %>
 
 <div class="bootstrap">
 	<div class="mypage-all_wrapper">
