--- a/app/views/providers/registrations/new.html.erb
+++ b/app/views/providers/registrations/new.html.erb
@@ -1,10 +1,8 @@
+<%= render 'providers/header' %>
 <div class="providers_signup">
 
 <h2>Seekleに無料でサービスを掲載する</h2>
-<p>Seekleを使うとこんなメリットが！</p>
-<ul>
- <li></li>
-</ul>
+
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
