--- a/app/assets/stylesheets/users/history.css
+++ b/app/assets/stylesheets/users/history.css
@@ -57,25 +57,10 @@
 @media screen and (min-width: 320px) and (max-width: 374px)
 {
 
-
+.reservation_history_wrapper .bootstrap .panel-body{
+	height:190px;
 }
 
-
-
-
-/* ipad iphone6のレスポンシブデザイン */
-
-@media (min-width: 375px) 
-{
-
-
-
-}
-
-
-
-/* ipad iphone6+PLUSから大きめのスマホのレスポンシブデザイン */
-@media screen and (max-width: 414px) {
 
 .reservation_history_wrapper{
 	width:100%;
@@ -100,7 +85,7 @@ font-size: 6px;
 
 
 .reservation_content{
-	margin-top:50px; 
+	margin-top:20px; 
 	width:80%;
 	margin-left: 0%;
 }
@@ -112,17 +97,84 @@ font-size: 6px;
 }
 
 .reservation_note_pic{
-	width:45%;
-	height:38%; 
+	display:none;
 }
 
 
 
 .reservation_history_wrapper .bootstrap .btn-default{
-	margin-left: 0%;
-	margin-top: 6%;
+
+	margin-top: 7%;
 	font-size: 12px;
+		margin-left: 25%;
 }
 
 
 }
+
+
+
+
+/* ipad iphone6のレスポンシブデザイン */
+
+@media (min-width: 375px) 
+{
+
+
+.reservation_history_wrapper .bootstrap .panel-body{
+	height:190px;
+}
+
+
+.reservation_history_wrapper{
+	width:100%;
+	margin:9% 0%;
+ 
+	}
+
+
+.reservation_history_wrapper h1{
+	font-size: 23px;
+	margin-left: 5%;
+}
+
+
+
+.reservation_history_wrapper .bootstrap a{
+font-size: 6px;
+	 padding-left: 9px;
+	 	 margin-left:10px; 
+	 	
+	}
+
+
+.reservation_content{
+	margin-top:20px; 
+	width:80%;
+	margin-left: 0%;
+}
+
+
+.reservation_content p{
+	line-height: 14px;
+	font-size: 10px;
+}
+
+.reservation_note_pic{
+	display:none;
+}
+
+
+
+.reservation_history_wrapper .bootstrap .btn-default{
+
+	margin-top: 7%;
+	font-size: 12px;
+		margin-left: 32%;
+}
+
+
+
+}
+
+
