--- a/app/assets/stylesheets/users/index.css
+++ b/app/assets/stylesheets/users/index.css
@@ -101,10 +101,7 @@ border-bottom: 2px solid	#FDF5E6;
 
 
 .profile_edit{
-	float: left; 
-	margin-top: -20px;
-	 margin-left: 62%;
-	 font-size: 13px;
+display: none;
 	}
 
 	.notification_content {
