--- a/app/assets/stylesheets/providers/providers.css
+++ b/app/assets/stylesheets/providers/providers.css
@@ -66,6 +66,50 @@ clear:both;
 
 
 
+
+
+/* ipad iphone6のレスポンシブデザイン */
+
+@media (max-width: 375px) 
+{
+
+
+.providers_info_show{
+    width:100%;
+    margin-left:5%;
+    margin-bottom: 10%;
+}
+
+.edit-button{
+    margin-left:45%
+}
+
+
+}
+
+
+
+/* ipad iphone6+PLUSから大きめのスマホのレスポンシブデザイン */
+@media screen and (max-width: 414px) {
+
+
+.providers_info_show{
+
+width:100%;
+    margin-top:4%;
+    margin-left:7%;
+    margin-bottom: 10%;
+}
+
+.edit-button{
+    margin-left:45%
+}
+
+
+}
+
+
+
 /* ipad iphone4と5のレスポンシブデザイン */
 @media screen and (min-width: 320px) and (max-width: 374px)
 {
@@ -98,47 +142,5 @@ clear:both;
 
 }
 
-
-
-
-/* ipad iphone6のレスポンシブデザイン */
-
-@media (min-width: 375px) 
-{
-
-
-.providers_info_show{
-    width:100%;
-    margin-left:5%;
-    margin-bottom: 10%;
-}
-
-.edit-button{
-    margin-left:45%
-}
-
-
-}
-
-
-
-/* ipad iphone6+PLUSから大きめのスマホのレスポンシブデザイン */
-@media screen and (min-width: 414px) {
-
-
-.providers_info_show{
-
-width:100%;
-    margin-top:4%;
-    margin-left:7%;
-    margin-bottom: 10%;
-}
-
-.edit-button{
-    margin-left:45%
-}
-
-
-}
 
 
