--- a/app/assets/stylesheets/notes/show.css
+++ b/app/assets/stylesheets/notes/show.css
@@ -1,32 +1,336 @@
+.shadow_btn{
+	font-size:22px;
+	font-weight:700;
+	text-decoration:none;
+	display:block;
+	text-align:center;
+	padding:9px;
+	cursor:pointer;
+	border:1px solid #333;
+	color:#fff;
+	box-shadow:2px 2px #555;
+	width:26%; 
+	border-radius:3%;
+	 }
+
+
+.shadow_btn:active{
+	box-shadow:0 0 #555;
+	margin-top:3%;
+}
+
+/*  note/show のcss */
+ 
+
+.message_reservetion .bootstrap .btn-default{
+	float:left;margin:23px 40px; }
 
 
 
-.shadow_btn{font-size:22px;font-weight:700;text-decoration:none;display:block;text-align:center;padding:9px;cursor:pointer;border:1px solid #333;color:#fff;box-shadow:2px 2px #555;width:26%; border-radius:3%; }
-.shadow_btn:active{box-shadow:0 0 #555;margin-top:3%; }
-
-.provider-introduction .shadow_btn{background-color:#6495ED; border-radius:3%; margin-top:2%; margin-left:71%;}
-.provider-introduction .shadow_btn:active{box-shadow:0 0 #555;margin-top:3%; }
 
 
-.provider_service_pictures,.reviews_providers,.rulesfromprovider{float:left;}
+.provider-introduction h1{
+	margin-top:40px;
+	width:100%; 
+	font-weight: normal; 
+	font-size:25px;
+}
 
-.provider_wrapper h2{
-  font-weight: normal;padding-left: 10px;border-left: solid 3px  #f18d00;font-size: 18px;font-weight: 700;
+.provider_wrapper p{
+	line-height: 1.5; 
+	font-size: 14px;
+}
+
+.provider_wrapper .sample_03{
+	width:50%;
+}
+
+ .provider_wrapper .sample_03 th{
+ 	width:15%; 
+ }  
+
+ .provider_wrapper .sample_03 td{
+ 	width:35%;
+ }
+
+.provider_wrapper{
+	width:100%;
+	margin-top:0;
+	height:1400px
+}
+
+.provider-introduction{
+	width:73%;
+	height:470px;
+	border-bottom:1px solid #dce0e0;
+	display:block; 
+	margin-left:14%;
+}
+
+.provider-introduction p{
+	float:left;
+	padding-right:80px;
+	padding-top:50px
+}
+
+.face_pic{
+	width:45%;
+	height:72%;
+	margin-right:40px;
+	margin-top:20px;
+	float:left;
+	border-radius:2%;
 }
 
 
-.provider_introduction h3{margin-left: 30%; width:20%;}
+.provider-introduction .shadow_btn{
+	background-color:#6495ED; 
+	border-radius:3%;
+	 margin-top:2%; 
+	 margin-left:71%;
+	}
+
+.provider-introduction .shadow_btn:active{
+	box-shadow:0 0 #555;
+	margin-top:3%;
+	 }
+
+.provider_service_pictures,.reviews_providers,.rulesfromprovider{
+	float:left;
+}
+
+.provider_wrapper h2{
+  font-weight: normal;
+  padding-left: 10px;
+  border-left: solid 3px  #f18d00;
+  font-size: 18px;
+  font-weight: 700;
+}
 
 
-.service-price_provider h1{color:#fff;text-align:center;font-size:40px;padding-top:28px}
-.service-price_provider{background-color:orange;margin-top:-27px;height:100px}
-.fa-jpy{padding-right:16px;font-size:46px}
-
-.provider_service_pictures{width:73%;height:420px; margin-left:1%}
-.service_pic{float:left;width:270px;height:300px;margin-top:60px;margin-left:15px}
-.rulesfromprovider{width:73%;height:0 auto;margin-left:14%; margin-bottom:20px;}
+.provider_introduction h3{
+	margin-left: 30%; 
+	width:20%;
+}
 
 
-.reviews_providers{width:73%;height:0 auto;margin-left:14%; }
-.main-image{background-color:gray;height:360px;}
+.service-price_provider h1{
+	color:#fff;
+	text-align:center;
+	font-size:40px;
+	padding-top:28px
+}
+.service-price_provider{
+	background-color:orange;
+	margin-top:-27px;
+	height:100px
+}
+.fa-jpy{
+	padding-right:16px;
+	font-size:46px
+}
+
+.provider_service_pictures{
+	width:73%;
+	height:420px; 
+	margin-left:1%
+}
+.service_pic{
+	float:left;
+	width:270px;
+	height:300px;
+	margin-top:60px;
+	margin-left:15px
+}
+.rulesfromprovider{
+	width:73%;
+	height:0 auto;
+	margin-left:14%; 
+	margin-bottom:20px;
+}
+
+
+.reviews_providers{
+	width:73%;
+	height:0 auto;
+	margin-left:14%;
+	 }
+
+.main-image{
+	background-color:gray;
+	height:360px;
+}
+
+
+
+
+
+
+/*レスポンシブ */
+
+
+
+
+
+/* ipad iphone6+PLUSから大きめのスマホのレスポンシブデザイン */
+@media screen and (max-width: 414px) {
+
+.provider-introduction{
+
+	border-bottom:none;
+
+}
+
+.sample_03{
+	width: 80%;
+	border-spacing: 0px;
+	border-top: none;
+	margin-left: 0px;
+	margin-top: 20px;
+}
+.sample_03 th{
+	width:23%;
+	padding:0px;
+	text-align: left;
+	vertical-align: top;
+	font-size: 14px;
+	border-left: none;
+	border-top: none;
+	border-right: none;
+	border-bottom: none;
+}
+.sample_03 td{
+	font-size: 14px;
+	width:100%;
+	padding:0px;
+	border-right:none;
+	border-bottom:none;
+}
+
+
+.provider_wrapper .sample_03{
+	width:100%;
+}
+
+ .provider_wrapper .sample_03 th{
+    display: block;
+ 
+	width:100%;
+ }  
+
+ .provider_wrapper .sample_03 td{
+
+     display: block;
+padding-top: 0px;
+padding-bottom: 10px;
+    padding-left:0px;
+ 	width:100%;
+ }
+
+.shadow_btn{
+	font-size:17px;
+	font-weight:700;
+	text-decoration:none;
+	display:block;
+	text-align:left;
+	padding:6px;
+padding-left: 25px;
+	width:60%; 
+	border-radius:3%;
+	 }
+
+
+.shadow_btn:active{
+	box-shadow:0 0 #555;
+	margin-top:3%;
+}
+
+
+.provider-introduction .shadow_btn{
+float:left;
+	border-radius:3%;
+	 margin-top:0%; 
+	 margin-left:13%;
+	}
+
+.provider-introduction .shadow_btn:active{
+	box-shadow:0 0 #555;
+	margin-top:3%;
+	 }
+
+
+.message_reservetion .bootstrap .btn-default{
+	float:left;
+	margin:0px 0px; }
+
+
+
+.provider-introduction h1{
+	font-size:17px;
+}
+
+
+.face_pic{
+	width:78%;
+	height:34%;
+	margin-left:10%;
+	margin-top:0px;
+}
+
+
+ .genre{
+ 	display:none;
+ }
+
+.genre p{
+	display:none;
+}
+}
+
+
+
+
+
+
+/* ipad iphone4と5のレスポンシブデザイン */
+@media screen and (min-width: 320px) and (max-width: 374px)
+{
+.shadow_btn{
+	font-size:14px;
+	font-weight:700;
+	text-decoration:none;
+	display:block;
+	text-align:center;
+padding-right: 20px;
+	width:60%; 
+	border-radius:3%;
+	 }
+
+
+.provider-introduction .shadow_btn{
+
+	 margin-left:8%;
+	}
+
+.message_reservetion .bootstrap .btn-default{
+	float:left;
+	    margin: 23px 0px;
+	}
+
+
+
+
+
+}
+
+
+
+
+
+/* ipad iphone6のレスポンシブデザイン */
+
+@media (min-width: 375px) {
+
+}
+
 
